@@ -2,6 +2,7 @@ from ftw.upgrade.command import create
 from ftw.upgrade.command import help
 from ftw.upgrade.command import install
 from ftw.upgrade.command import list_cmd
+from ftw.upgrade.command import plone_upgrade
 from ftw.upgrade.command import recook
 from ftw.upgrade.command import sites
 from ftw.upgrade.command import touch
@@ -126,6 +127,7 @@ class UpgradeCommand(object):
         create.setup_argparser(commands)
         install.setup_argparser(commands)
         list_cmd.setup_argparser(commands)
+        plone_upgrade.setup_argparser(commands)
         recook.setup_argparser(commands)
         sites.setup_argparser(commands)
         touch.setup_argparser(commands)
